WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
125251
[Mac] When NSError user info is missing NSErrorPeerCertificateChainKey, ArgumentCoder should extract it from NSURLErrorFailingURLPeerTrustErrorKey
https://bugs.webkit.org/show_bug.cgi?id=125251
Summary
[Mac] When NSError user info is missing NSErrorPeerCertificateChainKey, Argum...
mitz
Reported
2013-12-04 13:49:34 PST
[Mac] When NSError user info is missing NSErrorPeerCertificateChainKey, ArgumentCoder should extract it from NSURLErrorFailingURLPeerTrustErrorKey
Attachments
Get the peer certificates from the peer trust if needed
(2.10 KB, patch)
2013-12-04 13:52 PST
,
mitz
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2013-12-04 13:52:32 PST
Created
attachment 218445
[details]
Get the peer certificates from the peer trust if needed
mitz
Comment 2
2013-12-04 13:58:02 PST
Fixed in <
http://trac.webkit.org/r160122
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug